[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/regulation/deck_select.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 16.0
content_margin_top = 16.0
bg_color = Color( 0, 0, 0, 1 )

[node name="DeckRegulationSelect" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ReturnButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 64.0
text = "BACK"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 192.0
margin_top = 376.0
margin_right = 1088.0
margin_bottom = 480.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 12

[node name="LabelInformation" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -248.0
margin_right = 448.0
margin_bottom = 8.0
custom_styles/normal = SubResource( 1 )

[node name="ButtonDecide" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -176.0
margin_right = 192.0
margin_bottom = -80.0
text = "DECIDE"

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="ButtonDecide" to="." method="_on_ButtonDecide_pressed"]
